[gd_scene load_steps=5 format=3 uid="uid://dsdc0a2xxlsnk"]

[ext_resource type="Script" uid="uid://ufjgiyfp0op6" path="res://Script/Menu/selection_menu.gd" id="1_bbd4k"]
[ext_resource type="Texture2D" uid="uid://bfsa2yubkgaly" path="res://Assets/windows_xp_background.jpg" id="2_bbd4k"]
[ext_resource type="PackedScene" uid="uid://blqp7vyvbe5mq" path="res://Scenes/Menus/player_select.tscn" id="3_dj8c6"]
[ext_resource type="Texture2D" uid="uid://dvglsegh7oy0l" path="res://Assets/vide.png" id="4_3uq8l"]

[node name="SelectionMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_bbd4k")
metadata/_edit_horizontal_guides_ = [-351.0, 832.0]
metadata/_edit_vertical_guides_ = [1794.0, 285.0, 576.0, -655.0, 863.0]

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(306, 541)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(-266, -92, -258, 53, -162, 71, 93, 103, 536, 103, 783, 89, 834, 6, 834, -85, 834, -151, 780, -87, 745, -51, 689, -19, 610, 4, 494, 21, 353, 33, 171, 32, 82, 23, -12, 5, -103, -36, -180, -84, -271, -189)

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(575, 322.99997)
scale = Vector2(0.29895833, 0.29907405)
texture = ExtResource("2_bbd4k")

[node name="PlayerSelect1" parent="." instance=ExtResource("3_dj8c6")]
position = Vector2(151, 300)
clrName = "Blue"
clr = Color(0, 0, 1, 1)

[node name="PlayerSelect2" parent="." instance=ExtResource("3_dj8c6")]
position = Vector2(433, 300)
clrName = "Red"
clr = Color(1, 0, 0, 1)

[node name="PlayerSelect3" parent="." instance=ExtResource("3_dj8c6")]
position = Vector2(724, 300)
clrName = "Yellow"
clr = Color(1, 1, 0, 1)

[node name="PlayerSelect4" parent="." instance=ExtResource("3_dj8c6")]
position = Vector2(1000, 300)
clrName = "Green"
clr = Color(0, 1, 0, 1)

[node name="Play" type="Button" parent="."]
layout_mode = 0
offset_left = 441.0
offset_top = 541.0
offset_right = 699.0
offset_bottom = 626.0
mouse_filter = 1
disabled = true
text = "PLAY"

[node name="Vide" type="Sprite2D" parent="."]
position = Vector2(156.61447, 571.9375)
scale = Vector2(1.4480338, 1.3019658)
texture = ExtResource("4_3uq8l")

[node name="WhoseTurn" type="Label" parent="."]
layout_mode = 0
offset_left = 86.0
offset_top = 553.0
offset_right = 284.0
offset_bottom = 613.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1

[node name="local" type="Label" parent="."]
layout_mode = 0
offset_left = 85.0
offset_top = 558.0
offset_right = 283.0
offset_bottom = 618.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "This is a local multiplayer game"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Next" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 444.0
offset_top = 543.0
offset_right = 699.0
offset_bottom = 624.0
disabled = true
text = "Next"

[node name="StartGame" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 442.0
offset_top = 542.0
offset_right = 701.0
offset_bottom = 624.0
disabled = true
text = "START"

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="StartGame" to="." method="_on_start_game_pressed"]
